--- a/v1/.htaccess
+++ b/v1/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ /v1/index.php [QSA,L]
+RewriteRule ^(.*)$ /FlicksApi/v1/index.php [QSA,L]
